@@ -7,7 +7,7 @@
  /*
   * Author: Ramon Casero <rcasero@gmail.com>
   * Copyright © 2011 University of Oxford
-  * Version: 0.1.0
+  * Version: 0.1.1
   * $Rev$
   * $Date$
   *
@@ -94,6 +94,7 @@ void MexTemplateFilter<InVoxelType, OutVoxelType>::CopyAllFilterOutputsToMatlab(
  * slower and maybe the executable larger
  */
 
+#error FILTERINST types cannot be automatically determined by add_itk_imfilter_template.sh
 #define FILTERINST(T1, T2)				\
   template class MexTemplateImageFilter<T1, T2>;
 
