@@ -1,5 +1,12 @@
 2011-08-09  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
+	* ItkToolbox/MexTemplateFilter.hpp (v0.1.1):
+	* ItkToolbox/MexTemplateFilter.cpp (v0.1.1):
+
+	- Add precompiler errors to force the user look there when he
+	tries to compile after automatically adding a new filter with
+	add_itk_imfilter_template.sh.
+
 	* ItkToolbox/ItkImFilter.cpp (v0.4.2):
 
 	- Add comments that can be used by script
